[package]
name = "mdbook-argus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
html-escape = "0.2.13"
mdbook-preprocessor-utils = "0.1.6"
nom = "7.1.3"
nom_locate = "4.2.0"
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tempfile = "3.10.1"
toml = "0.8.12"

[build-dependencies]
anyhow = "1.0.81"
mdbook-preprocessor-utils = "0.1.6"
